--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  cupertino_icons: 1.0.2
+  provider: 6.0.0
+  logger: 1.1.0
+  modal_bottom_sheet: 2.0.0
 
 dev_dependencies:
   flutter_test:
