--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: 6.0.0
   logger: 1.1.0
   modal_bottom_sheet: 2.0.0
+  uni_links: 0.5.1
 
 dev_dependencies:
   flutter_test:
